artifacts/generated/parser.output
Grammar

    0 $accept: program $end

    1 program: PROGRAM IDENTIFIER SEMICOLON declarations_opt routine_list compound_statement DOT

    2 declarations_opt: ε
    3                 | VAR var_declaration_list

    4 var_declaration_list: identifier_list COLON type_specifier SEMICOLON
    5                     | var_declaration_list identifier_list COLON type_specifier SEMICOLON

    6 identifier_list: IDENTIFIER
    7                | identifier_list COMMA IDENTIFIER

    8 type_specifier: INTEGER_TYPE
    9               | BOOLEAN_TYPE

   10 routine_list: ε
   11             | routine_list routine

   12 routine: FUNCTION IDENTIFIER LPAREN parameters_opt RPAREN COLON type_specifier SEMICOLON declarations_opt compound_statement SEMICOLON
   13        | PROCEDURE IDENTIFIER LPAREN parameters_opt RPAREN SEMICOLON declarations_opt compound_statement SEMICOLON

   14 parameters_opt: ε
   15               | parameters

   16 parameters: parameter_group
   17           | parameters SEMICOLON parameter_group

   18 parameter_group: identifier_list COLON type_specifier

   19 compound_statement: BEGIN_TOKEN statement_list_opt END_TOKEN

   20 statement_list_opt: ε
   21                   | statement_list
   22                   | statement_list SEMICOLON

   23 statement_list: statement
   24               | statement_list SEMICOLON statement

   25 statement: compound_statement
   26          | IDENTIFIER ASSIGN expression
   27          | IF expression THEN statement
   28          | IF expression THEN statement ELSE statement
   29          | WHILE expression DO statement
   30          | FOR IDENTIFIER ASSIGN expression TO expression DO statement
   31          | WRITE LPAREN arguments_opt RPAREN
   32          | WRITELN LPAREN arguments_opt RPAREN
   33          | IDENTIFIER LPAREN arguments_opt RPAREN
   34          | RETURN_TOKEN expression

   35 arguments_opt: ε
   36              | argument_list

   37 argument_list: expression
   38              | argument_list COMMA expression

   39 expression: INTEGER_LITERAL
   40           | TRUE_TOKEN
   41           | FALSE_TOKEN
   42           | STRING_LITERAL
   43           | IDENTIFIER
   44           | IDENTIFIER LPAREN arguments_opt RPAREN
   45           | PARAM LPAREN expression RPAREN
   46           | LPAREN expression RPAREN
   47           | MINUS expression
   48           | NOT expression
   49           | expression PLUS expression
   50           | expression MINUS expression
   51           | expression STAR expression
   52           | expression SLASH expression
   53           | expression MOD expression
   54           | expression AND expression
   55           | expression OR expression
   56           | expression EQUAL expression
   57           | expression NOT_EQUAL expression
   58           | expression LT expression
   59           | expression LTE expression
   60           | expression GT expression
   61           | expression GTE expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 1
    VAR (259) 3
    BEGIN_TOKEN (260) 19
    END_TOKEN (261) 19
    FUNCTION (262) 12
    PROCEDURE (263) 13
    RETURN_TOKEN (264) 34
    INTEGER_TYPE (265) 8
    BOOLEAN_TYPE (266) 9
    TRUE_TOKEN (267) 40
    FALSE_TOKEN (268) 41
    IF (269) 27 28
    THEN (270) 27 28
    ELSE (271) 28
    WHILE (272) 29
    DO (273) 29 30
    FOR (274) 30
    TO (275) 30
    WRITE (276) 31
    WRITELN (277) 32
    PARAM (278) 45
    AND (279) 54
    OR (280) 55
    NOT (281) 48
    MOD (282) 53
    ASSIGN (283) 26 30
    EQUAL (284) 56
    NOT_EQUAL (285) 57
    LT (286) 58
    LTE (287) 59
    GT (288) 60
    GTE (289) 61
    PLUS (290) 49
    MINUS (291) 47 50
    STAR (292) 51
    SLASH (293) 52
    LPAREN (294) 12 13 31 32 33 44 45 46
    RPAREN (295) 12 13 31 32 33 44 45 46
    COMMA (296) 7 38
    SEMICOLON (297) 1 4 5 12 13 17 22 24
    COLON (298) 4 5 12 18
    DOT (299) 1
    INTEGER_LITERAL <integer> (300) 39
    IDENTIFIER <text> (301) 1 6 7 12 13 26 30 33 43 44
    STRING_LITERAL <text> (302) 42
    UMINUS (303)
    LOWER_THAN_ELSE (304)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    program (51)
        on left: 1
        on right: 0
    declarations_opt <var_list> (52)
        on left: 2 3
        on right: 1 12 13
    var_declaration_list <var_list> (53)
        on left: 4 5
        on right: 3 5
    identifier_list <identifier_list> (54)
        on left: 6 7
        on right: 4 5 7 18
    type_specifier <type> (55)
        on left: 8 9
        on right: 4 5 12 18
    routine_list <routine_list> (56)
        on left: 10 11
        on right: 1 11
    routine <routine> (57)
        on left: 12 13
        on right: 11
    parameters_opt <param_list> (58)
        on left: 14 15
        on right: 12 13
    parameters <param_list> (59)
        on left: 16 17
        on right: 15 17
    parameter_group <param_list> (60)
        on left: 18
        on right: 16 17
    compound_statement <stmt> (61)
        on left: 19
        on right: 1 12 13 25
    statement_list_opt <stmt_list> (62)
        on left: 20 21 22
        on right: 19
    statement_list <stmt_list> (63)
        on left: 23 24
        on right: 21 22 24
    statement <stmt> (64)
        on left: 25 26 27 28 29 30 31 32 33 34
        on right: 23 24 27 28 29 30
    arguments_opt <expr_list> (65)
        on left: 35 36
        on right: 31 32 33 44
    argument_list <expr_list> (66)
        on left: 37 38
        on right: 36 38
    expression <expr> (67)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
        on right: 26 27 28 29 30 34 37 38 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61


State 0

    0 $accept: • program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM • IDENTIFIER SEMICOLON declarations_opt routine_list compound_statement DOT

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: PROGRAM IDENTIFIER • SEMICOLON declarations_opt routine_list compound_statement DOT

    SEMICOLON  shift, and go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: PROGRAM IDENTIFIER SEMICOLON • declarations_opt routine_list compound_statement DOT

    VAR  shift, and go to state 6

    $default  reduce using rule 2 (declarations_opt)

    declarations_opt  go to state 7


State 6

    3 declarations_opt: VAR • var_declaration_list

    IDENTIFIER  shift, and go to state 8

    var_declaration_list  go to state 9
    identifier_list       go to state 10


State 7

    1 program: PROGRAM IDENTIFIER SEMICOLON declarations_opt • routine_list compound_statement DOT

    $default  reduce using rule 10 (routine_list)

    routine_list  go to state 11


State 8

    6 identifier_list: IDENTIFIER •

    $default  reduce using rule 6 (identifier_list)


State 9

    3 declarations_opt: VAR var_declaration_list •
    5 var_declaration_list: var_declaration_list • identifier_list COLON type_specifier SEMICOLON

    IDENTIFIER  shift, and go to state 8

    $default  reduce using rule 3 (declarations_opt)

    identifier_list  go to state 12


State 10

    4 var_declaration_list: identifier_list • COLON type_specifier SEMICOLON
    7 identifier_list: identifier_list • COMMA IDENTIFIER

    COMMA  shift, and go to state 13
    COLON  shift, and go to state 14


State 11

    1 program: PROGRAM IDENTIFIER SEMICOLON declarations_opt routine_list • compound_statement DOT
   11 routine_list: routine_list • routine

    BEGIN_TOKEN  shift, and go to state 15
    FUNCTION     shift, and go to state 16
    PROCEDURE    shift, and go to state 17

    routine             go to state 18
    compound_statement  go to state 19


State 12

    5 var_declaration_list: var_declaration_list identifier_list • COLON type_specifier SEMICOLON
    7 identifier_list: identifier_list • COMMA IDENTIFIER

    COMMA  shift, and go to state 13
    COLON  shift, and go to state 20


State 13

    7 identifier_list: identifier_list COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 21


State 14

    4 var_declaration_list: identifier_list COLON • type_specifier SEMICOLON

    INTEGER_TYPE  shift, and go to state 22
    BOOLEAN_TYPE  shift, and go to state 23

    type_specifier  go to state 24


State 15

   19 compound_statement: BEGIN_TOKEN • statement_list_opt END_TOKEN

    BEGIN_TOKEN   shift, and go to state 15
    RETURN_TOKEN  shift, and go to state 25
    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    WRITE         shift, and go to state 29
    WRITELN       shift, and go to state 30
    IDENTIFIER    shift, and go to state 31

    $default  reduce using rule 20 (statement_list_opt)

    compound_statement  go to state 32
    statement_list_opt  go to state 33
    statement_list      go to state 34
    statement           go to state 35


State 16

   12 routine: FUNCTION • IDENTIFIER LPAREN parameters_opt RPAREN COLON type_specifier SEMICOLON declarations_opt compound_statement SEMICOLON

    IDENTIFIER  shift, and go to state 36


State 17

   13 routine: PROCEDURE • IDENTIFIER LPAREN parameters_opt RPAREN SEMICOLON declarations_opt compound_statement SEMICOLON

    IDENTIFIER  shift, and go to state 37


State 18

   11 routine_list: routine_list routine •

    $default  reduce using rule 11 (routine_list)


State 19

    1 program: PROGRAM IDENTIFIER SEMICOLON declarations_opt routine_list compound_statement • DOT

    DOT  shift, and go to state 38


State 20

    5 var_declaration_list: var_declaration_list identifier_list COLON • type_specifier SEMICOLON

    INTEGER_TYPE  shift, and go to state 22
    BOOLEAN_TYPE  shift, and go to state 23

    type_specifier  go to state 39


State 21

    7 identifier_list: identifier_list COMMA IDENTIFIER •

    $default  reduce using rule 7 (identifier_list)


State 22

    8 type_specifier: INTEGER_TYPE •

    $default  reduce using rule 8 (type_specifier)


State 23

    9 type_specifier: BOOLEAN_TYPE •

    $default  reduce using rule 9 (type_specifier)


State 24

    4 var_declaration_list: identifier_list COLON type_specifier • SEMICOLON

    SEMICOLON  shift, and go to state 40


State 25

   34 statement: RETURN_TOKEN • expression

    TRUE_TOKEN       shift, and go to state 41
    FALSE_TOKEN      shift, and go to state 42
    PARAM            shift, and go to state 43
    NOT              shift, and go to state 44
    MINUS            shift, and go to state 45
    LPAREN           shift, and go to state 46
    INTEGER_LITERAL  shift, and go to state 47
    IDENTIFIER       shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    expression  go to state 50


State 26

   27 statement: IF • expression THEN statement
   28          | IF • expression THEN statement ELSE statement

    TRUE_TOKEN       shift, and go to state 41
    FALSE_TOKEN      shift, and go to state 42
    PARAM            shift, and go to state 43
    NOT              shift, and go to state 44
    MINUS            shift, and go to state 45
    LPAREN           shift, and go to state 46
    INTEGER_LITERAL  shift, and go to state 47
    IDENTIFIER       shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    expression  go to state 51


State 27

   29 statement: WHILE • expression DO statement

    TRUE_TOKEN       shift, and go to state 41
    FALSE_TOKEN      shift, and go to state 42
    PARAM            shift, and go to state 43
    NOT              shift, and go to state 44
    MINUS            shift, and go to state 45
    LPAREN           shift, and go to state 46
    INTEGER_LITERAL  shift, and go to state 47
    IDENTIFIER       shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    expression  go to state 52


State 28

   30 statement: FOR • IDENTIFIER ASSIGN expression TO expression DO statement

    IDENTIFIER  shift, and go to state 53


State 29

   31 statement: WRITE • LPAREN arguments_opt RPAREN

    LPAREN  shift, and go to state 54


State 30

   32 statement: WRITELN • LPAREN arguments_opt RPAREN

    LPAREN  shift, and go to state 55


State 31

   26 statement: IDENTIFIER • ASSIGN expression
   33          | IDENTIFIER • LPAREN arguments_opt RPAREN

    ASSIGN  shift, and go to state 56
    LPAREN  shift, and go to state 57


State 32

   25 statement: compound_statement •

    $default  reduce using rule 25 (statement)


State 33

   19 compound_statement: BEGIN_TOKEN statement_list_opt • END_TOKEN

    END_TOKEN  shift, and go to state 58


State 34

   21 statement_list_opt: statement_list •
   22                   | statement_list • SEMICOLON
   24 statement_list: statement_list • SEMICOLON statement

    SEMICOLON  shift, and go to state 59

    $default  reduce using rule 21 (statement_list_opt)


State 35

   23 statement_list: statement •

    $default  reduce using rule 23 (statement_list)


State 36

   12 routine: FUNCTION IDENTIFIER • LPAREN parameters_opt RPAREN COLON type_specifier SEMICOLON declarations_opt compound_statement SEMICOLON

    LPAREN  shift, and go to state 60


State 37

   13 routine: PROCEDURE IDENTIFIER • LPAREN parameters_opt RPAREN SEMICOLON declarations_opt compound_statement SEMICOLON

    LPAREN  shift, and go to state 61


State 38

    1 program: PROGRAM IDENTIFIER SEMICOLON declarations_opt routine_list compound_statement DOT •

    $default  reduce using rule 1 (program)


State 39

    5 var_declaration_list: var_declaration_list identifier_list COLON type_specifier • SEMICOLON

    SEMICOLON  shift, and go to state 62


State 40

    4 var_declaration_list: identifier_list COLON type_specifier SEMICOLON •

    $default  reduce using rule 4 (var_declaration_list)


State 41

   40 expression: TRUE_TOKEN •

    $default  reduce using rule 40 (expression)


State 42

   41 expression: FALSE_TOKEN •

    $default  reduce using rule 41 (expression)


State 43

   45 expression: PARAM • LPAREN expression RPAREN

    LPAREN  shift, and go to state 63


State 44

   48 expression: NOT • expression

    TRUE_TOKEN       shift, and go to state 41
    FALSE_TOKEN      shift, and go to state 42
    PARAM            shift, and go to state 43
    NOT              shift, and go to state 44
    MINUS            shift, and go to state 45
    LPAREN           shift, and go to state 46
    INTEGER_LITERAL  shift, and go to state 47
    IDENTIFIER       shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    expression  go to state 64


State 45

   47 expression: MINUS • expression

    TRUE_TOKEN       shift, and go to state 41
    FALSE_TOKEN      shift, and go to state 42
    PARAM            shift, and go to state 43
    NOT              shift, and go to state 44
    MINUS            shift, and go to state 45
    LPAREN           shift, and go to state 46
    INTEGER_LITERAL  shift, and go to state 47
    IDENTIFIER       shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    expression  go to state 65


State 46

   46 expression: LPAREN • expression RPAREN

    TRUE_TOKEN       shift, and go to state 41
    FALSE_TOKEN      shift, and go to state 42
    PARAM            shift, and go to state 43
    NOT              shift, and go to state 44
    MINUS            shift, and go to state 45
    LPAREN           shift, and go to state 46
    INTEGER_LITERAL  shift, and go to state 47
    IDENTIFIER       shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    expression  go to state 66


State 47

   39 expression: INTEGER_LITERAL •

    $default  reduce using rule 39 (expression)


State 48

   43 expression: IDENTIFIER •
   44           | IDENTIFIER • LPAREN arguments_opt RPAREN

    LPAREN  shift, and go to state 67

    $default  reduce using rule 43 (expression)


State 49

   42 expression: STRING_LITERAL •

    $default  reduce using rule 42 (expression)


State 50

   34 statement: RETURN_TOKEN expression •
   49 expression: expression • PLUS expression
   50           | expression • MINUS expression
   51           | expression • STAR expression
   52           | expression • SLASH expression
   53           | expression • MOD expression
   54           | expression • AND expression
   55           | expression • OR expression
   56           | expression • EQUAL expression
   57           | expression • NOT_EQUAL expression
   58           | expression • LT expression
   59           | expression • LTE expression
   60           | expression • GT expression
   61           | expression • GTE expression

    AND        shift, and go to state 68
    OR         shift, and go to state 69
    MOD        shift, and go to state 70
    EQUAL      shift, and go to state 71
    NOT_EQUAL  shift, and go to state 72
    LT         shift, and go to state 73
    LTE        shift, and go to state 74
    GT         shift, and go to state 75
    GTE        shift, and go to state 76
    PLUS       shift, and go to state 77
    MINUS      shift, and go to state 78
    STAR       shift, and go to state 79
    SLASH      shift, and go to state 80

    $default  reduce using rule 34 (statement)


State 51

   27 statement: IF expression • THEN statement
   28          | IF expression • THEN statement ELSE statement
   49 expression: expression • PLUS expression
   50           | expression • MINUS expression
   51           | expression • STAR expression
   52           | expression • SLASH expression
   53           | expression • MOD expression
   54           | expression • AND expression
   55           | expression • OR expression
   56           | expression • EQUAL expression
   57           | expression • NOT_EQUAL expression
   58           | expression • LT expression
   59           | expression • LTE expression
   60           | expression • GT expression
   61           | expression • GTE expression

    THEN       shift, and go to state 81
    AND        shift, and go to state 68
    OR         shift, and go to state 69
    MOD        shift, and go to state 70
    EQUAL      shift, and go to state 71
    NOT_EQUAL  shift, and go to state 72
    LT         shift, and go to state 73
    LTE        shift, and go to state 74
    GT         shift, and go to state 75
    GTE        shift, and go to state 76
    PLUS       shift, and go to state 77
    MINUS      shift, and go to state 78
    STAR       shift, and go to state 79
    SLASH      shift, and go to state 80


State 52

   29 statement: WHILE expression • DO statement
   49 expression: expression • PLUS expression
   50           | expression • MINUS expression
   51           | expression • STAR expression
   52           | expression • SLASH expression
   53           | expression • MOD expression
   54           | expression • AND expression
   55           | expression • OR expression
   56           | expression • EQUAL expression
   57           | expression • NOT_EQUAL expression
   58           | expression • LT expression
   59           | expression • LTE expression
   60           | expression • GT expression
   61           | expression • GTE expression

    DO         shift, and go to state 82
    AND        shift, and go to state 68
    OR         shift, and go to state 69
    MOD        shift, and go to state 70
    EQUAL      shift, and go to state 71
    NOT_EQUAL  shift, and go to state 72
    LT         shift, and go to state 73
    LTE        shift, and go to state 74
    GT         shift, and go to state 75
    GTE        shift, and go to state 76
    PLUS       shift, and go to state 77
    MINUS      shift, and go to state 78
    STAR       shift, and go to state 79
    SLASH      shift, and go to state 80


State 53

   30 statement: FOR IDENTIFIER • ASSIGN expression TO expression DO statement

    ASSIGN  shift, and go to state 83


State 54

   31 statement: WRITE LPAREN • arguments_opt RPAREN

    TRUE_TOKEN       shift, and go to state 41
    FALSE_TOKEN      shift, and go to state 42
    PARAM            shift, and go to state 43
    NOT              shift, and go to state 44
    MINUS            shift, and go to state 45
    LPAREN           shift, and go to state 46
    INTEGER_LITERAL  shift, and go to state 47
    IDENTIFIER       shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    $default  reduce using rule 35 (arguments_opt)

    arguments_opt  go to state 84
    argument_list  go to state 85
    expression     go to state 86


State 55

   32 statement: WRITELN LPAREN • arguments_opt RPAREN

    TRUE_TOKEN       shift, and go to state 41
    FALSE_TOKEN      shift, and go to state 42
    PARAM            shift, and go to state 43
    NOT              shift, and go to state 44
    MINUS            shift, and go to state 45
    LPAREN           shift, and go to state 46
    INTEGER_LITERAL  shift, and go to state 47
    IDENTIFIER       shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    $default  reduce using rule 35 (arguments_opt)

    arguments_opt  go to state 87
    argument_list  go to state 85
    expression     go to state 86


State 56

   26 statement: IDENTIFIER ASSIGN • expression

    TRUE_TOKEN       shift, and go to state 41
    FALSE_TOKEN      shift, and go to state 42
    PARAM            shift, and go to state 43
    NOT              shift, and go to state 44
    MINUS            shift, and go to state 45
    LPAREN           shift, and go to state 46
    INTEGER_LITERAL  shift, and go to state 47
    IDENTIFIER       shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    expression  go to state 88


State 57

   33 statement: IDENTIFIER LPAREN • arguments_opt RPAREN

    TRUE_TOKEN       shift, and go to state 41
    FALSE_TOKEN      shift, and go to state 42
    PARAM            shift, and go to state 43
    NOT              shift, and go to state 44
    MINUS            shift, and go to state 45
    LPAREN           shift, and go to state 46
    INTEGER_LITERAL  shift, and go to state 47
    IDENTIFIER       shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    $default  reduce using rule 35 (arguments_opt)

    arguments_opt  go to state 89
    argument_list  go to state 85
    expression     go to state 86


State 58

   19 compound_statement: BEGIN_TOKEN statement_list_opt END_TOKEN •

    $default  reduce using rule 19 (compound_statement)


State 59

   22 statement_list_opt: statement_list SEMICOLON •
   24 statement_list: statement_list SEMICOLON • statement

    BEGIN_TOKEN   shift, and go to state 15
    RETURN_TOKEN  shift, and go to state 25
    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    WRITE         shift, and go to state 29
    WRITELN       shift, and go to state 30
    IDENTIFIER    shift, and go to state 31

    $default  reduce using rule 22 (statement_list_opt)

    compound_statement  go to state 32
    statement           go to state 90


State 60

   12 routine: FUNCTION IDENTIFIER LPAREN • parameters_opt RPAREN COLON type_specifier SEMICOLON declarations_opt compound_statement SEMICOLON

    IDENTIFIER  shift, and go to state 8

    $default  reduce using rule 14 (parameters_opt)
